// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Amazon Q Developer > snapshot: full Amazon Q Developer output 1`] = `
{
  "format": "json",
  "rootKey": "mcpServers",
  "servers": {
    "github": {
      "args": [
        "-y",
        "@modelcontextprotocol/server-github",
      ],
      "command": "npx",
      "env": {
        "GITHUB_TOKEN": "\${GITHUB_TOKEN}",
      },
      "type": "stdio",
    },
    "sentry": {
      "headers": {
        "Authorization": "Bearer \${SENTRY_TOKEN}",
      },
      "type": "http",
      "url": "https://mcp.sentry.dev/sse",
    },
  },
}
`;

exports[`Cursor > snapshot: full Cursor output 1`] = `
{
  "format": "json",
  "rootKey": "mcpServers",
  "servers": {
    "github": {
      "args": [
        "-y",
        "@modelcontextprotocol/server-github",
      ],
      "command": "npx",
      "env": {
        "GITHUB_TOKEN": "\${env:GITHUB_TOKEN}",
      },
      "type": "stdio",
    },
    "sentry": {
      "headers": {
        "Authorization": "Bearer \${env:SENTRY_TOKEN}",
      },
      "type": "http",
      "url": "https://mcp.sentry.dev/sse",
    },
  },
}
`;

exports[`Gemini CLI > snapshot: full Gemini CLI output 1`] = `
{
  "format": "json",
  "rootKey": "mcpServers",
  "servers": {
    "github": {
      "args": [
        "-y",
        "@modelcontextprotocol/server-github",
      ],
      "command": "npx",
      "env": {
        "GITHUB_TOKEN": "\${GITHUB_TOKEN}",
      },
    },
    "sentry": {
      "headers": {
        "Authorization": "Bearer \${SENTRY_TOKEN}",
      },
      "httpUrl": "https://mcp.sentry.dev/sse",
    },
  },
}
`;

exports[`GitHub Copilot > snapshot: full GitHub Copilot output 1`] = `
{
  "format": "json",
  "rootKey": "mcpServers",
  "servers": {
    "github": {
      "args": [
        "-y",
        "@modelcontextprotocol/server-github",
      ],
      "command": "npx",
      "env": {
        "GITHUB_TOKEN": "\${GITHUB_TOKEN}",
      },
      "type": "local",
    },
    "sentry": {
      "headers": {
        "Authorization": "Bearer \${SENTRY_TOKEN}",
      },
      "type": "http",
      "url": "https://mcp.sentry.dev/sse",
    },
  },
}
`;

exports[`OpenCode > snapshot: full OpenCode output 1`] = `
{
  "format": "json",
  "rootKey": "mcp",
  "servers": {
    "github": {
      "command": [
        "npx",
        "-y",
        "@modelcontextprotocol/server-github",
      ],
      "env": {
        "GITHUB_TOKEN": "{env:GITHUB_TOKEN}",
      },
      "type": "local",
    },
    "sentry": {
      "headers": {
        "Authorization": "Bearer {env:SENTRY_TOKEN}",
      },
      "type": "remote",
      "url": "https://mcp.sentry.dev/sse",
    },
  },
}
`;

exports[`Windsurf > snapshot: full Windsurf output 1`] = `
{
  "format": "json",
  "rootKey": "mcpServers",
  "servers": {
    "github": {
      "args": [
        "-y",
        "@modelcontextprotocol/server-github",
      ],
      "command": "npx",
      "env": {
        "GITHUB_TOKEN": "\${env:GITHUB_TOKEN}",
      },
      "type": "stdio",
    },
    "sentry": {
      "headers": {
        "Authorization": "Bearer \${env:SENTRY_TOKEN}",
      },
      "serverUrl": "https://mcp.sentry.dev/sse",
      "type": "http",
    },
  },
}
`;

exports[`transformForAgent > Claude Code > snapshot: full Claude Code output 1`] = `
{
  "format": "json",
  "rootKey": "mcpServers",
  "servers": {
    "github": {
      "args": [
        "-y",
        "@modelcontextprotocol/server-github",
      ],
      "command": "npx",
      "env": {
        "GITHUB_TOKEN": "\${GITHUB_TOKEN}",
      },
      "type": "stdio",
    },
    "sentry": {
      "headers": {
        "Authorization": "Bearer \${SENTRY_TOKEN}",
      },
      "type": "http",
      "url": "https://mcp.sentry.dev/sse",
    },
  },
}
`;

exports[`transformForAgent > Codex > snapshot: full Codex output 1`] = `
{
  "format": "toml",
  "rootKey": "mcp_servers",
  "servers": {
    "github": {
      "args": [
        "-y",
        "@modelcontextprotocol/server-github",
      ],
      "command": "npx",
      "env_vars": [
        "GITHUB_TOKEN",
      ],
      "type": "stdio",
    },
    "sentry": {
      "bearer_token_env_var": "SENTRY_TOKEN",
      "type": "http",
      "url": "https://mcp.sentry.dev/sse",
    },
  },
}
`;
